--- a/Finance/WebContent/templates/interna.xhtml
+++ b/Finance/WebContent/templates/interna.xhtml
@@ -6,27 +6,22 @@
       xmlns:c="http://java.sun.com/jsp/jstl/core"> 
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-	<title><ui:insert name="titulo">Finance</ui:insert></title>
+<!-- 	<title><ui:insert name="titulo">Finance</ui:insert></title> -->
 	<h:outputStylesheet library="css" name="estilo.css"/>
-	<style type="text/css"><!--
-	#logotipo {
-		text-align: right; 
-		float: right;
-	} -->
-    </style>
+	
 </h:head>
 <h:body>
 	<div id="container">
 		
-		<div id="titulo">
-			<ui:insert name="titulo">Finance</ui:insert> 
-		</div>
+<!-- 		<div id="titulo"> -->
+<!-- 			<ui:insert name="titulo">Finance</ui:insert>  -->
+<!-- 		</div> -->
 		
 		<c:if test="${not empty contextoBean.usuarioLogado}">
 		
-			<div id="logotipo">
-				<h:graphicImage library="imagens" name="logotipo_m.png"/>
-			</div>
+<!-- 			<div id="logotipo"> -->
+<!-- 				<h:graphicImage library="imagens" name="logotipo_m.png"/> -->
+<!-- 			</div> -->
 			<div id="barra_menu">
 		    	<ui:insert name="barra_menu">
 		    		<ui:include src="/restrito/menu_sistema.xhtml"/>
@@ -38,13 +33,13 @@
 			<ui:insert name="corpo"/>
 		</div>
 		
-		<c:if test="${not empty contextoBean.usuarioLogado}">
-			<div id="rodape">
-		    	<ui:insert name="rodape">
-		    		<ui:include src="/publico/rodape.xhtml"/>
-		    	</ui:insert> 
-			</div>
-		</c:if>	
+<!-- 		<c:if test="${not empty contextoBean.usuarioLogado}"> -->
+<!-- 			<div id="rodape"> -->
+<!-- 		    	<ui:insert name="rodape"> -->
+<!-- 		    		<ui:include src="/publico/rodape.xhtml"/> -->
+<!-- 		    	</ui:insert>  -->
+<!-- 			</div> -->
+<!-- 		</c:if>	 -->
 	</div>
 </h:body>
 </html>
